--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.2.22", features = ["macros", "time", "fs", "tcp"] }
+tokio = { version = "0.2.22", features = ["macros", "time", "fs", "tcp", "signal"] }
 input = { path = "../input" }
 net = { path = "../net" }
 serde = { version = "1.0.117", features = ["derive"] }
