--- a/example/server.toml
+++ b/example/server.toml
@@ -1,4 +1,5 @@
 listen-address = "0.0.0.0:5258"
 switch-keys = [29, 56, 111]
 identity-path = "identity.p12"
+# Doesn't have to be set.
 identity-password = "123456789"
