--- a/input/Cargo.toml
+++ b/input/Cargo.toml
@@ -10,8 +10,7 @@ edition = "2018"
 tokio = { version = "0.3.3", features = ["fs", "io-util", "net", "sync", "rt", "time"] }
 libc = "0.2.77"
 serde = { version = "1.0.117", features = ["derive"] }
-# Temporary solution until my changes get through.
-inotify = { git = "https://github.com/htrefil/inotify/" }
+inotify = "0.9.1"
 futures = "0.3.7"
 
 [build-dependencies]
