--- a/input/Cargo.toml
+++ b/input/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.117", features = ["derive"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+inotify = "0.9.1"
 tokio = { version = "0.3.3", features = ["fs", "io-util", "net", "sync", "rt", "time"] }
 libc = "0.2.77"
-serde = { version = "1.0.117", features = ["derive"] }
-inotify = "0.9.1"
 futures = "0.3.7"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = { version = "0.3.9", features = ["winuser"] }
 
 [build-dependencies]
 bindgen = "0.55.1"
-cc = "1.0.60"
