--- a/input/Cargo.toml
+++ b/input/Cargo.toml
@@ -13,10 +13,10 @@ serde = { version = "1.0.117", features = ["derive"] }
 inotify = "0.9.1"
 tokio = { version = "0.3.3", features = ["fs", "io-util", "net", "sync", "rt", "time"] }
 libc = "0.2.77"
-futures = "0.3.7"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.9", features = ["winuser"] }
+tokio = { version = "0.3.3", features = ["sync"] }
 
 [build-dependencies]
 bindgen = "0.55.1"
