--- a/input/Cargo.toml
+++ b/input/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.117", features = ["derive"] }
+futures = "0.3.8"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 inotify = "0.9.1"
