Update to tokio 1.0

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.3.3", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread"] }
+tokio = { version = "1.0.1", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
 input = { path = "../input" }
 net = { path = "../net" }
 serde = { version = "1.0.117", features = ["derive"] }
@@ -15,5 +15,5 @@ toml = "0.5.7"
 structopt = "0.3.20"
 log = "0.4.11"
 env_logger = "0.8.1"
-tokio-native-tls = "0.2.0"
+tokio-native-tls = "0.3.0"
 anyhow = "1.0.33"
