--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "server"
+description = "A tool for sharing keyboard and mouse across multiple Linux and Windows machines, the server"
+license = "MIT"
 version = "0.2.0"
 authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
 edition = "2018"
