--- a/rkvm-net/Cargo.toml
+++ b/rkvm-net/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "net"
+name = "rkvm-net"
 version = "0.2.0"
 authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
 edition = "2018"
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-input = { path = "../input" }
+rkvm-input = { path = "../rkvm-input" }
 serde = { version = "1.0.117", features = ["derive"] }
 bincode = "1.3.1"
 tokio = { version = "1.0.1", features = ["io-util"] }
