--- a/rkvm-server/Cargo.toml
+++ b/rkvm-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rkvm-client"
+name = "rkvm-server"
 license = "MIT"
 version = "0.2.0"
 authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
@@ -9,8 +9,8 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "1.0.1", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
-input = { path = "../input" }
-net = { path = "../net" }
+rkvm-input = { path = "../rkvm-input" }
+rkvm-net = { path = "../rkvm-net" }
 serde = { version = "1.0.117", features = ["derive"] }
 toml = "0.5.7"
 structopt = "0.3.20"
@@ -20,10 +20,10 @@ tokio-native-tls = "0.3.0"
 anyhow = "1.0.33"
 
 [package.metadata.rpm]
-package = "rkvm-client"
+package = "rkvm-server"
 
 [package.metadata.rpm.cargo]
 buildflags = ["--release"]
 
 [package.metadata.rpm.targets]
-client = { path = "/usr/bin/rkvm-client" }
+server = { path = "/usr/bin/rkvm-server" }
