--- a/rkvm-client/Cargo.toml
+++ b/rkvm-client/Cargo.toml
@@ -3,7 +3,7 @@ name = "rkvm-client"
 license = "MIT"
 version = "0.2.0"
 authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,9 +15,10 @@ serde = { version = "1.0.117", features = ["derive"] }
 toml = "0.5.7"
 log = "0.4.11"
 env_logger = "0.8.1"
-tokio-native-tls = "0.3.0"
-anyhow = "1.0.33"
 clap = { version = "4.2.2", features = ["derive"] }
+thiserror = "1.0.40"
+tokio-rustls = "0.24.0"
+rustls-pemfile = "1.0.2"
 
 [package.metadata.rpm]
 package = "rkvm-client"
