--- a/example/server.toml
+++ b/example/server.toml
@@ -1,6 +1,4 @@
-listen-address = "0.0.0.0:5258"
-# Switch to next client by pressing the left alt key.
-switch-keys = ["LeftAlt"]
-identity-path = "identity.p12"
-# Leave unset if no password is set.
-identity-password = "123456789"
+listen = "0.0.0.0:5258"
+switch-key = "LeftAlt"
+certificate = "example/certificate.crt"
+key = "example/key.pem"
