--- a/rkvm-net/Cargo.toml
+++ b/rkvm-net/Cargo.toml
@@ -2,12 +2,14 @@
 name = "rkvm-net"
 version = "0.2.0"
 authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rkvm-input = { path = "../rkvm-input" }
 serde = { version = "1.0.117", features = ["derive"] }
-bincode = "1.3.1"
+bincode = "1.3.3"
 tokio = { version = "1.0.1", features = ["io-util"] }
+async-trait = "0.1.68"
+thiserror = "1.0.40"
