--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,12 @@ jobs:
           path: |
             target/release/*.exe
 
+    ubuntu:
+      runs-on: ubuntu-latest
+
+      steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
