--- a/rkvm-certificate-gen/Cargo.toml
+++ b/rkvm-certificate-gen/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.2.2"
+clap = { version = "4.2.2", features = ["derive"] }
 tempfile = "3.1.0"
 thiserror = "1.0.40"
