--- a/rkvm-net/Cargo.toml
+++ b/rkvm-net/Cargo.toml
@@ -13,3 +13,6 @@ bincode = "1.3.3"
 tokio = { version = "1.0.1", features = ["io-util"] }
 async-trait = "0.1.68"
 thiserror = "1.0.40"
+hmac = "0.12.1"
+sha2 = "0.10.6"
+rand = "0.8.5"
