--- a/rkvm-input/Cargo.toml
+++ b/rkvm-input/Cargo.toml
@@ -9,10 +9,11 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.117", features = ["derive"] }
 futures = "0.3.8"
+smallvec = { version = "1.10.0", features = ["serde"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-inotify = "0.9.2"
-tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time"] }
+inotify = "0.10.0"
+tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time", "macros"] }
 libc = "0.2.77"
 
 [target.'cfg(target_os = "windows")'.dependencies]
