--- a/example/server.toml
+++ b/example/server.toml
@@ -2,3 +2,4 @@ listen = "0.0.0.0:5258"
 switch-key = "LeftAlt"
 certificate = "example/certificate.crt"
 key = "example/key.pem"
+password = "12345678"
