Fix certificate extension in example config

--- a/example/server.toml
+++ b/example/server.toml
@@ -1,6 +1,6 @@
 listen = "0.0.0.0:5258"
 switch-keys = ["LeftAlt", "LeftCtrl"]
-certificate = "/etc/rkvm/certificate.crt"
+certificate = "/etc/rkvm/certificate.pem"
 key = "/etc/rkvm/key.pem"
 
 # This is to prevent malicious clients from connecting to the server.
