--- a/rkvm-input/Cargo.toml
+++ b/rkvm-input/Cargo.toml
@@ -14,6 +14,7 @@ inotify = "0.10.0"
 tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time", "macros"] }
 libc = "0.2.77"
 log = "0.4.11"
+thiserror = "1.0.40"
 
 [build-dependencies]
 bindgen = "0.65.1"
