rkvm-{server,client}: Remove dead peers quickly
I use rkvm on a machine which hangs multiple times a day, leaving no
TCP FIN or RSTs behind.

Previously, the UX got very confusing once I rebooted the machine, because
it captured inputs without forwarding them anywhere live.

It's unfortunate that the TCP settings aren't shared between the client
& server because keepalive settings should be consistent to avoid one
peer disconnecting and the other waiting longer before timing out.

--- a/rkvm-client/Cargo.toml
+++ b/rkvm-client/Cargo.toml
@@ -19,6 +19,7 @@ clap = { version = "4.2.2", features = ["derive"] }
 thiserror = "1.0.40"
 tokio-rustls = "0.24.0"
 rustls-pemfile = "1.0.2"
+socket2 = { version = "0.5.3", features = ["all"] }
 
 [package.metadata.rpm]
 package = "rkvm-client"
