--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
+      run: sudo apt update && sudo apt -y install libevdev-dev && cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
