--- a/example/server.toml
+++ b/example/server.toml
@@ -3,9 +3,13 @@ listen = "0.0.0.0:5258"
 switch-keys = ["left-alt", "left-ctrl"]
 certificate = "/etc/rkvm/certificate.pem"
 key = "/etc/rkvm/key.pem"
-# Specify the list of input devices to register in the following array,
-# or leave the array emtpy to register all detected input devices.
-device-names = []
+# Specify a list of paths to input device event file to register the
+# input devices in the following array, or leave the array emtpy to
+# register all detected input devices.
+#
+# You can find the path to event file of each input device by listing
+# the contents of `/dev/input/by-id/` folder.
+input-device-paths = []
 
 # This is to prevent malicious clients from connecting to the server.
 # Make sure this matches your client's config.
