--- a/rkvm-server/Cargo.toml
+++ b/rkvm-server/Cargo.toml
@@ -20,8 +20,10 @@ slab = "0.4.8"
 rand = "0.8.5"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing = "0.1.37"
+humantime = "2.1.0"
 rkvm-net = { path = "../rkvm-net" }
 rkvm-input = { path = "../rkvm-input" }
+rkvm-config = { path = "../rkvm-config" }
 
 [package.metadata.rpm]
 package = "rkvm-server"
