Port rkvm to QUIC

--- a/rkvm-client/Cargo.toml
+++ b/rkvm-client/Cargo.toml
@@ -13,13 +13,12 @@ rkvm-input = { path = "../rkvm-input" }
 rkvm-net = { path = "../rkvm-net" }
 serde = { version = "1.0.117", features = ["derive"] }
 toml = "0.5.7"
-env_logger = "0.8.1"
 clap = { version = "4.2.2", features = ["derive"] }
 thiserror = "1.0.40"
-tokio-rustls = "0.24.0"
-rustls-pemfile = "1.0.2"
+rustls-pemfile = "2.1.2"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+quinn = "0.11.2"
 
 [package.metadata.rpm]
 package = "rkvm-client"
