--- a/rkvm-server/Cargo.toml
+++ b/rkvm-server/Cargo.toml
@@ -13,8 +13,7 @@ serde = { version = "1.0.117", features = ["derive"] }
 toml = "0.5.7"
 env_logger = "0.8.1"
 clap = { version = "4.2.2", features = ["derive"] }
-tokio-rustls = "0.24.0"
-rustls-pemfile = "1.0.2"
+rustls-pemfile = "2.1.2"
 thiserror = "1.0.40"
 slab = "0.4.8"
 rand = "0.8.5"
@@ -22,6 +21,7 @@ tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing = "0.1.37"
 rkvm-net = { path = "../rkvm-net" }
 rkvm-input = { path = "../rkvm-input" }
+quinn = "0.11.2"
 
 [package.metadata.rpm]
 package = "rkvm-server"
